--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,8 +3,12 @@
     <string name="btn_setting">系统设置</string>
     <string name="btn_device">连接设备</string>
     <string name="state_not_connect">蓝牙未连接！</string>
+    <string name="state_connecting">正在连接蓝牙设备!</string>
     <string name="btn_positive">确定</string>
     <string name="btn_negative">取消</string>
     <string name="dialog_device_title">设备列表</string>
     <string name="dialog_device_searching">正在搜索设备</string>
+    <string name="btn_disconnect">断开连接</string>
+    <string name="state_connected">设备已连接！</string>
+    <string name="msg_disconnect">断开连接失败</string>
 </resources>
