增加UUID设置页，部分逻辑调整

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Helmsman</string>
-    <string name="btn_setting">系统设置</string>
+    <string name="btn_setting">程序设置</string>
     <string name="btn_device">连接设备</string>
     <string name="state_not_connect">蓝牙未连接！</string>
     <string name="state_connecting">正在连接蓝牙设备!</string>
@@ -11,4 +11,12 @@
     <string name="btn_disconnect">断开连接</string>
     <string name="state_connected">设备已连接！</string>
     <string name="msg_disconnect">断开连接失败</string>
+    <string name="err_device_irrelevant">设备服务不匹配！</string>
+
+    <!-- replace '-' with "&#8211;" -->
+    <string name="uuid_service">0000ffe0&#8211;0000&#8211;1000&#8211;8000&#8211;00805f9b34fb</string>
+    <string name="uuid_characteristic">0000ffe1&#8211;0000&#8211;1000&#8211;8000&#8211;00805f9b34fb</string>
+    <string name="pf_key_service">edit_service</string>
+    <string name="pf_key_characteristic">edit_characteristic</string>
+
 </resources>
